--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": " npx jest --verbose",
     "test-watch": "npx jest --verbose  --watchAll",
     "start": "npx tsc && node dist/index.js",
-    "dev": "concurrently -n \"TS, Node\" \"npx tsc --watch\" \"nodemon dist/index.js\""
+    "dev": "concurrently -n \"TS, Node\" \"npx tsc --watch\" \"npx jest --verbose  --watchAll\" \"nodemon dist/index.js\""
   },
   "author": "Bonevy BEBY",
   "license": "ISC",
